resources/css/kompass.css
/*!
*
* Built with love in Hannover by secondnetwork and B&B.
* https://secondnetwork.de
* https://bundb.de
*

Theme Name: Kompass A Laravel CMS
Theme URI: https://kompass.secondnetwork.de
Description: technology by secondnetwork.

License: MIT
License URI: http://opensource.org/licenses/mit-license.php

*/
@import "tailwindcss";

@source "../../resources/views/**/*.blade.php";
@plugin "daisyui";

@import "./base/base.css";
@import "./base/grid_layout.css";
/* @import "./base/fonts.css"; */
@import "./base/typography.css";

@import "./blocks/admin/login.css";
@import "./blocks/admin/dashboard.css";
@import "./blocks/admin/medialibrary.css";
@import "./blocks/blockitem.css";

@import "./components/inputs.css";
@import "./components/button.css";
@import "./components/lite-yt-embed.css";

@theme {
  --color-primary: var(--color-blue-500);
  --color-error: var(--color-red-500);

    --color-primary-50: #E6F0FF; 
    --color-primary-100: #CCE0FF; 
    --color-primary-200: #9FC5FE; 
    --color-primary-300: #6CA6FE; 
    --color-primary-400: #3F8BFD; 
    --color-primary-500: #0D6EFD; 
    --color-primary-600: #0256D4; 
    --color-primary-700: #013F9D; 
    --color-primary-800: #012B6A; 
    --color-primary-900: #001433; 


   --color-secondary-50: #ECEDEF;
   --color-secondary-100: #D8DBDE;
   --color-secondary-200: #B4BAC0;
   --color-secondary-300: #8D96A0;
   --color-secondary-400: #69737D;
   --color-secondary-500: #495057;
   --color-secondary-600: #3A4045;
   --color-secondary-700: #2C3035;
   --color-secondary-800: #1E2124;
   --color-secondary-900: #0E0F11;

    --color-brand-50: #FFF6E5;
    --color-brand-100: #FFEDCC;
    --color-brand-200: #FFDB99;
    --color-brand-300: #FFC966;
    --color-brand-400: #FFB833;
    --color-brand-500: #FFA700;
    --color-brand-600: #CC8500;
    --color-brand-700: #996300;
    --color-brand-800: #664200;
    --color-brand-900: #332100;


}

@layer utilities {
  
  .btn {
    @apply border-2;
    @media (hover: hover) {
      &:hover {
        --btn-bg: color-mix(in oklab, var(--btn-color, var(--color-base-200)), #ffffff 0%);
      }
    }
  }

  .btn-primary, .btn-error{
    &:not(.btn-outline) {
      @media (hover: hover) {
        &:hover {
          --btn-bg: #0000;
          --btn-fg: var(--btn-color);
          --btn-border: var(--btn-color);
        }
      }
    } 
  }
  .divider {
    height: 1px;
    &::before, &::after {
      height: 1px;
      background-color: var(--color-base-300);
    }
  }

  .badge-sm {
    @apply border;
  }
}



@plugin "daisyui/theme" {
  name: "light";
  default: true;
  prefersdark: true;
  color-scheme: "light";
  --color-base-100: oklch(100% 0 0);
  --color-base-200: oklch(98% 0.002 247.839);
  --color-base-300: oklch(92% 0.01 258.338);
  --color-base-content: oklch(37% 0.034 259.733);
  --color-primary: oklch(54% 0.245 262.881);
  --color-primary-content: oklch(98% 0.001 106.423);
  --color-secondary: #FFA700;
  --color-secondary-content: oklch(37% 0.034 259.733);
  --color-accent: oklch(49% 0.27 292.581);
  --color-accent-content: oklch(100% 0 0);
  --color-neutral: oklch(55% 0.016 285.938);
  --color-neutral-content: oklch(98% 0.003 247.858);
  --color-info: oklch(58% 0.158 241.966);
  --color-info-content: oklch(97% 0.013 236.62);
  --color-success: oklch(76% 0.233 130.85);
  --color-success-content: oklch(27% 0.033 256.848);
  --color-warning: oklch(75% 0.183 55.934);
  --color-warning-content: oklch(27% 0.033 256.848);
  --color-error: oklch(64% 0.246 16.439);
  --color-error-content: oklch(96% 0.015 12.422);
  --radius-selector: 0.5rem;
  --radius-field: 0.25rem;
  --radius-box: 0.5rem;
  --size-selector: 0.25rem;
  --size-field: 0.25rem;
  --border: 1px;
  --depth: 0;
  --noise: 0;
}


@plugin "daisyui/theme" {
  name: "dark";
  default: false;
  prefersdark: true;
  color-scheme: "dark";
  
  --color-base-100: #171717;
  --color-base-200: #1f1f1f;
  --color-base-300: #404040;
  --color-base-content: #e5e5e5;
  
  --color-primary: #f59e0b;
  --color-primary-content: #000000;
  
  --color-secondary: #262626;
  --color-secondary-content: #e5e5e5;
  
  --color-accent: #92400e;
  --color-accent-content: #fde68a;
  
  --color-neutral: #e5e5e5;
  --color-neutral-content: #171717;
  
  --color-error: #ef4444;
  --color-error-content: #ffffff;

  --color-info: #3b82f6;
  --color-info-content: #ffffff;
  --color-success: #22c55e;
  --color-success-content: #ffffff;
  --color-warning: #f59e0b;
  --color-warning-content: #000000;

  --radius-selector: 0.375rem;
  --radius-field: 0.375rem;
  --radius-box: 0.375rem;
  --size-selector: 0.25rem;
  --size-field: 0.25rem;
  --border: 1px;
  --depth: 0;
  --noise: 0;
}

.divide-gray-50{
  @apply  divide-gray-500/30;
}

